--- a/cartsuccess.html
+++ b/cartsuccess.html
@@ -1,108 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="corse assignment HTML and CSS @ noroff fagskole">
-    <meta name="description" content="purchase sucsessfull page">
-    <meta name="keywords" content="HTML, CSS">
-    <meta name="author" content="Dannielsan">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Checkout sucsess page</title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link href="styles.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body class="site-grid">
-    <header>
-      <a href="index.html" class="navlogo"></a>
-      <div class="dropdown">
-        <i
-          class="fa fa-shopping-cart"
-          ref="shoppingcart.html"
-          id="carticon"
-        ></i>
-        <input type="checkbox" id="menucheck">
-        <label for="menucheck"><p>menu</p></label>
-        <i class="fa fa-bars" id="menuicon"></i>
-        <div class="dropdown-content">
-          <a href="products.html">Products</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
-          <a href="cart.html">Cart</a>
-        </div>
-      </div>
-    </header>
-    <main class="main">
-      <h1 class="hidoh1"></h1>
-      <div class="checkoutgrid">
-        <div class="checkoutinformationarea">
-          <i class="fa fa-shopping-bag" id="shoppingbag">1 items</i>
-          <p>______________________________</p>
-          <div class="titlepicturepricecontainer">
-            <img src="./assets/jakke7.jpg" alt="productjacketsmall">
-            <div class="textinfoareainsideinformationgrid">
-              <a>Mens better jacket</a>
-              <div class="priceandquantity">
-                <p>Qty:1 </p>
-                <p>1899,-</p>
-              </div>
-            </div>
-          </div>
-          <p>______________________________</p>
-          <div class="checkoutpricegrid">
-            <div class="text">
-              <p>Subtotal</p>
-              <p>Shipping</p>
-              <p>Vat(included)</p>
-              <p><b>Total</b></p>
-            </div>
-            <div class="numbers">
-              <p>Kr. 1999.00</p>
-              <p>Kr. 249.00</p>
-              <p>Kr. 475.00</p>
-              <p><b>Kr. 2248.00</b></p>
-            </div>
-          </div>
-        </div>
-        <div class="checkoutinputarea">
-          <h2>Thank you for your purchase</h2>
-          <h3>Order number: #00042069</h3>
-        </div>
-      </div>
-    </main>
-    <footer class="footer">
-      <div class="footercollums">
-<!--         <p>Copyright&copy;</p> -->
-        <div class="footer1">
-          <p class="footertitle1">May we help you</p>
-          <ul>
-            <li><a href="contact.html"></a>Contact</li>
-            <li><a href="about.html"></a>FAQ</li>
-            <li><a href="about.html"></a>About us</li>
-          </ul>
-        </div>
-        <div class="footer2">
-          <p class="footertitle2">Your profile</p>
-          <ul>
-            <li><a href="signin.html"></a>Contact</li>
-            <li><a href="cart.html"></a>Orders</li>
-            <li><a href="privacy.html"></a>Privacy and cookie policy</li>
-          </ul>
-        </div>
-        <div class="footer3">
-          <p class="footertitle3">Sign up for email updates</p>
-          <p>E-mail</p>
-          <input type="text" placeholder="Sign up for email updates" name="emailsignup"/>
-        </div>
-      </div>
-    </footer>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="description"
+			content="corse assignment HTML and CSS @ noroff fagskole" />
+		<meta name="description" content="purchase sucsessfull page" />
+		<meta name="keywords" content="HTML, CSS" />
+		<meta name="author" content="Dannielsan" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Checkout sucsess page</title>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+			rel="stylesheet" />
+		<link href="styles.css" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+			rel="stylesheet" />
+	</head>
+	<body class="site-grid">
+		<header>
+			<a href="index.html" class="navlogo"></a>
+			<div class="dropdown">
+				<i
+					class="fa fa-shopping-cart"
+					ref="shoppingcart.html"
+					id="carticon"></i>
+				<input type="checkbox" id="menucheck" />
+				<label for="menucheck"><p>menu</p></label>
+				<i class="fa fa-bars" id="menuicon"></i>
+				<div class="dropdown-content">
+					<a href="products.html">Products</a>
+					<a href="about.html">About</a>
+					<a href="contact.html">Contact</a>
+					<a href="cart.html">Cart</a>
+				</div>
+			</div>
+		</header>
+
+    <div class="total" style="margin-inline: auto;">HELLO WORLD</div>
+		<main class="HIDDDENNOW">
+			<div class="old" style="display: none">
+				<h1 class="hidoh1"></h1>
+				<div class="checkoutgrid">
+					<div class="checkoutinformationarea">
+						<i class="fa fa-shopping-bag" id="shoppingbag">1 items</i>
+						<p>______________________________</p>
+						<div class="titlepicturepricecontainer">
+							<img src="./assets/jakke7.jpg" alt="productjacketsmall" />
+							<div class="textinfoareainsideinformationgrid">
+								<a>Mens better jacket</a>
+								<div class="priceandquantity">
+									<p>Qty:1</p>
+									<p>1899,-</p>
+								</div>
+							</div>
+						</div>
+						<p>______________________________</p>
+						<div class="checkoutpricegrid">
+							<div class="text">
+								<p>Subtotal</p>
+								<p>Shipping</p>
+								<p>Vat(included)</p>
+								<p><b>Total</b></p>
+							</div>
+							<div class="numbers">
+								<p>Kr. 1999.00</p>
+								<p>Kr. 249.00</p>
+								<p>Kr. 475.00</p>
+								<p><b>Kr. 2248.00</b></p>
+							</div>
+						</div>
+					</div>
+					<div class="checkoutinputarea">
+						<h2>Thank you for your purchase</h2>
+						<h3>Order number: #00042069</h3>
+					</div>
+				</div>
+			</div>
+		</main>
+
+		<footer class="footer">
+			<div class="footercollums">
+				<!--         <p>Copyright&copy;</p> -->
+				<div class="footer1">
+					<p class="footertitle1">May we help you</p>
+					<ul>
+						<li><a href="contact.html"></a>Contact</li>
+						<li><a href="about.html"></a>FAQ</li>
+						<li><a href="about.html"></a>About us</li>
+					</ul>
+				</div>
+				<div class="footer2">
+					<p class="footertitle2">Your profile</p>
+					<ul>
+						<li><a href="signin.html"></a>Contact</li>
+						<li><a href="cart.html"></a>Orders</li>
+						<li><a href="privacy.html"></a>Privacy and cookie policy</li>
+					</ul>
+				</div>
+				<div class="footer3">
+					<p class="footertitle3">Sign up for email updates</p>
+					<p>E-mail</p>
+					<input
+						type="text"
+						placeholder="Sign up for email updates"
+						name="emailsignup" />
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
